--- a/header.html
+++ b/header.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -18,15 +19,15 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link " href="#"> <i class="bi bi-geo-alt"></i> Locate</a>
+                            <a class="nav-link " href="locate.php"> <i class="bi bi-geo-alt"></i> Locate</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link " href="#"> <i class="bi bi-megaphone"></i> Forum</a>
+                            <a class="nav-link " href="forum.php"> <i class="bi bi-megaphone"></i> Forum</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link " href="#"> <i class="bi bi-journal-text"></i> Guide</a>
+                            <a class="nav-link " href="guide.php"> <i class="bi bi-journal-text"></i> Guide</a>
                         </li>
                     </ul>
 
